--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
         </div>
         <div class="hero-content">
             <div class="profile-photo">
-                <img src="profile.jpg" alt="Ashutosh Pattnaik">
+                <img src="https://lh3.googleusercontent.com/pw/AP1GczPUHSWMpE6TTtxdIZCfBpixK4DYltwcKmq-hICx6f4Zu6UQWgDPwjl5X_H4yzOQ4LLQ0zIPPTILMwNY8jJtQCACUSG8m0SMcFM2p73wxPqIyKBmRTE=w1920-h1080" alt="Ashutosh Pattnaik">
             </div>
             <h1>Ashutosh Pattnaik</h1>
             <p class="subtitle">Data Analyst | Power BI Specialist</p>
@@ -855,3 +855,4 @@
     </script>
 </body>
 </html>
+
