--- a/index.html
+++ b/index.html
@@ -28,11 +28,23 @@
             padding: 1.5rem 5%;
             z-index: 1000;
             transition: all 0.3s ease;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
 
         nav.scrolled {
             padding: 1rem 5%;
             box-shadow: 0 2px 20px rgba(0, 0, 0, 0.5);
+        }
+
+        .logo {
+            font-size: 1.5rem;
+            font-weight: 700;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         nav ul {
@@ -41,6 +53,7 @@
             justify-content: flex-end;
             gap: 2rem;
             flex-wrap: wrap;
+            align-items: center;
         }
 
         nav a {
@@ -64,6 +77,109 @@
 
         nav a:hover::after {
             width: 100%;
+        }
+
+        .nav-button {
+            padding: 0.7rem 1.5rem;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: #fff;
+            text-decoration: none;
+            border-radius: 50px;
+            font-weight: 600;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            border: none;
+            cursor: pointer;
+            font-size: 0.95rem;
+        }
+
+        .nav-button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 8px 20px rgba(102, 126, 234, 0.4);
+        }
+
+        .nav-button::after {
+            display: none;
+        }
+
+        /* Hamburger Menu */
+        .menu-toggle {
+            display: none;
+            flex-direction: column;
+            cursor: pointer;
+            gap: 5px;
+            background: none;
+            border: none;
+        }
+
+        .menu-toggle span {
+            width: 25px;
+            height: 3px;
+            background: #667eea;
+            border-radius: 2px;
+            transition: all 0.3s ease;
+        }
+
+        .menu-toggle.active span:nth-child(1) {
+            transform: rotate(45deg) translate(8px, 8px);
+        }
+
+        .menu-toggle.active span:nth-child(2) {
+            opacity: 0;
+        }
+
+        .menu-toggle.active span:nth-child(3) {
+            transform: rotate(-45deg) translate(7px, -7px);
+        }
+
+        /* Mobile Menu */
+        .mobile-menu {
+            display: none;
+            position: fixed;
+            top: 70px;
+            left: 0;
+            width: 100%;
+            background: rgba(15, 15, 15, 0.98);
+            backdrop-filter: blur(10px);
+            flex-direction: column;
+            padding: 2rem 5%;
+            gap: 1.5rem;
+            z-index: 999;
+            animation: slideDown 0.3s ease;
+        }
+
+        .mobile-menu.active {
+            display: flex;
+        }
+
+        @keyframes slideDown {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .mobile-menu a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: 500;
+            padding: 0.8rem 0;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            transition: color 0.3s ease;
+        }
+
+        .mobile-menu a:hover {
+            color: #667eea;
+        }
+
+        .mobile-menu .nav-button {
+            width: 100%;
+            text-align: center;
+            border-bottom: none;
+            margin-top: 1rem;
         }
 
         /* Hero Section */
@@ -561,12 +677,15 @@
             }
 
             nav ul {
-                gap: 0.8rem;
-                font-size: 0.8rem;
+                display: none;
             }
 
-            nav a {
-                font-size: 0.85rem;
+            .menu-toggle {
+                display: flex;
+            }
+
+            .logo {
+                font-size: 1.2rem;
             }
 
             .hero {
@@ -747,14 +866,12 @@
                 padding: 1rem 3%;
             }
 
-            nav ul {
-                gap: 0.5rem;
-                font-size: 0.75rem;
-                justify-content: center;
+            .logo {
+                font-size: 1rem;
             }
 
-            nav a {
-                font-size: 0.75rem;
+            .menu-toggle {
+                display: flex;
             }
 
             .hero h1 {
@@ -840,12 +957,33 @@
             section {
                 padding: 2rem 3%;
             }
+
+            .mobile-menu {
+                top: 60px;
+            }
         }
     </style>
 </head>
 <body>
     <nav id="navbar">
-        <ul>
+        <div class="logo">AP</div>
+        <button class="menu-toggle" id="menuToggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+        <ul id="mobileMenu" class="mobile-menu">
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#experience">Experience</a>
+            <a href="#skills">Skills</a>
+            <a href="#projects">Projects</a>
+            <a href="#publications">Publications</a>
+            <a href="#certifications">Certifications</a>
+            <a href="#contact">Contact</a>
+            <a href="#contact" class="nav-button">Hire Me</a>
+        </ul>
+        <ul class="desktop-nav">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#experience">Experience</a></li>
@@ -854,6 +992,7 @@
             <li><a href="#publications">Publications</a></li>
             <li><a href="#certifications">Certifications</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="#contact" class="nav-button">Hire Me</a></li>
         </ul>
     </nav>
 
@@ -1059,6 +1198,24 @@
     </footer>
 
     <script>
+        // Menu Toggle
+        const menuToggle = document.getElementById('menuToggle');
+        const mobileMenu = document.getElementById('mobileMenu');
+
+        menuToggle.addEventListener('click', () => {
+            menuToggle.classList.toggle('active');
+            mobileMenu.classList.toggle('active');
+        });
+
+        // Close menu when a link is clicked
+        const menuLinks = mobileMenu.querySelectorAll('a');
+        menuLinks.forEach(link => {
+            link.addEventListener('click', () => {
+                menuToggle.classList.remove('active');
+                mobileMenu.classList.remove('active');
+            });
+        });
+
         // Smooth scrolling
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
