--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "tslf2i0ll2");
+    </script>
+
+
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ashutosh Pattnaik - Data Analyst & Power BI Specialist. Expert in data visualization, SQL, Python, and business intelligence. View my portfolio of healthcare dashboards, e-commerce analysis, and ML projects.">
@@ -1311,3 +1321,4 @@
     </script>
 </body>
 </html>
+
