--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     })(window, document, "clarity", "script", "tslf2i0ll2");
     </script>
 
-
-    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ashutosh Pattnaik - Data Analyst & Power BI Specialist. Expert in data visualization, SQL, Python, and business intelligence. View my portfolio of healthcare dashboards, e-commerce analysis, and ML projects.">
@@ -1021,7 +1019,7 @@
     <a href="#main" class="skip-to-main">Skip to main content</a>
     
     <nav id="navbar" role="navigation" aria-label="Main navigation">
-        <div class="logo" aria-label="Ashutosh Pattnaik">AP</div>
+        <div class="logo" aria-label="Ashutosh Pattnaik"><i>Portfolio</i></div>
         <button class="menu-toggle" id="menuToggle" aria-label="Toggle navigation menu" aria-expanded="false">
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
@@ -1030,6 +1028,7 @@
         <ul id="mobileMenu" class="mobile-menu" aria-label="Mobile navigation">
             <a href="#home">Home</a>
             <a href="#about">About</a>
+            <a href="#education">Education</a>
             <a href="#experience">Experience</a>
             <a href="#skills">Skills</a>
             <a href="#projects">Projects</a>
@@ -1041,6 +1040,7 @@
         <ul class="desktop-nav" aria-label="Desktop navigation">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
+            <li><a href="#education">Education</a></li>
             <li><a href="#experience">Experience</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
@@ -1086,7 +1086,37 @@
             <div class="about-content">
                 <p>A Data Analyst with hands-on experience translating business requirements into technical solutions and analytical insights. Skilled in collaborating with stakeholders to develop dashboards and reports that guide executive decision-making and improve business outcomes.</p>
                 <p>Proficient in Power BI, SQL, and Python for data extraction, transformation, and visualization. Passionate about leveraging data to drive business strategy and operational efficiency.</p>
-                <p><strong>Education:</strong> B.Tech in Computer Science Engineering from NIST, Berhampur (2020-2024)</p>
+            </div>
+        </section>
+
+        <section id="education" role="region" aria-label="Education section">
+            <h2 class="section-title">Education</h2>
+            <div class="experience-grid">
+                <article class="experience-card">
+                    <h3>B.Tech in Computer Science Engineering</h3>
+                    <p class="duration">NIST, Berhampur | 2020-2024</p>
+                    <ul>
+                        <li>Specialized in Data Analytics, Machine Learning, and Business Intelligence</li>
+                        <li>Completed capstone project on Economic Forecasting using ML models</li>
+                        <li>Led over 20 cloud computing workshops for 100+ participants</li>
+                    </ul>
+                </article>
+                <article class="experience-card">
+                    <h3>Intermediate, Science</h3>
+                    <p class="duration">Kendriya Vidyalaya | 2018-2020</p>
+                    <ul>
+                        <li>Focused on Mathematics, Physics, and Computer Science</li>
+                        <li>Awarded first place in district-level Sanskrit speech competition</li>
+                    </ul>
+                </article>
+                <article class="experience-card">
+                    <h3>Matriculation</h3>
+                    <p class="duration">Kendriya Vidyalaya | 2017-2018</p>
+                    <ul>
+                        <li>Strong foundation in Mathematics and Sciences</li>
+                        <li>Captained the winning team in inter-house Kho-Kho tournament</li>
+                    </ul>
+                </article>
             </div>
         </section>
 
@@ -1125,7 +1155,7 @@
                             <p>Power BI, Matplotlib, Seaborn</p>
                         </div>
                         <div class="skill-card">
-                            <h4>🐍 Data Analysis</h4>
+                            <h4>💾 Data Analysis</h4>
                             <p>Python (Pandas, Scikit-learn), SQL</p>
                         </div>
                         <div class="skill-card">
@@ -1321,4 +1351,3 @@
     </script>
 </body>
 </html>
-
