--- a/index.html
+++ b/index.html
@@ -1014,7 +1014,7 @@
     <script>
         // --- CONFIGURATION ---
         // ⚠️ IMPORTANT: Paste your Web App URL from Step 7 here
-        const WEB_APP_URL = "YOUR_WEB_APP_URL_GOES_HERE";
+        const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbwUepZybAY1TRn8x-N8fK8SjVo_TVqvmtfHGettG1nkUL0U3zcm3OQ3ipVGeQh5VlD5/exec";
         // --- END CONFIGURATION ---
 
         (function() {
@@ -1074,7 +1074,7 @@
                     // Fallback for very old browsers (less reliable)
                     fetch(WEB_APP_URL, {
                         method: 'POST',
-                        body: JSON.stringify(payload),
+                        body: JSON.stringify(payload),Yeah once I set up a time 
                         keepalive: true
                     });
                 }
