--- a/index.html
+++ b/index.html
@@ -1064,9 +1064,9 @@
                 <h1>Ashutosh Pattnaik</h1>
                 <p class="subtitle">Business/Data Analyst | Power BI Developer | Published Author | Python, Excel | Open to Opportunities</p>
                 <div class="contact-links">
-                    <a href="tel:8280858066">📞+91-8658320057</a>
+                    <a href="tel:8658320057">📞+91-8658320057</a>
                     <a href="mailto:ashutoshpattnaik147@gmail.com">📧 Email</a>
-                    <a href="#" target="_blank" rel="noopener noreferrer">🔗 Github</a>
+                    <a href="https://github.com/ashutosh147pattnaik/Projects" target="_blank" rel="noopener noreferrer">🔗 Github</a>
                 </div>
                 <div>
                     <a href="#projects" class="cta-button">View Projects</a>
@@ -1302,9 +1302,9 @@
             <div class="contact-content">
                 <div class="contact-info">
                     <p>I'm always open to discussing new projects, creative ideas, or opportunities to be part of your vision.</p>
-                    <a href="tel:8280858066">📞+91-8658320057</a>
+                    <a href="tel:8658320057">📞+91-8658320057</a>
                     <a href="mailto:ashutoshpattnaik147@gmail.com">📧 ashutoshpattnaik147@gmail.com</a>
-                    <a href="#" target="_blank" rel="noopener noreferrer">🔗 Github</a>
+                    <a href="https://github.com/ashutosh147pattnaik/Projects" target="_blank" rel="noopener noreferrer">🔗 Github</a>
                 </div>
             </div>
         </section>
@@ -1382,3 +1382,4 @@
     </script>
 </body>
 </html>
+
