--- a/index.html
+++ b/index.html
@@ -1028,6 +1028,7 @@
             <a href="#projects">Projects</a>
             <a href="#publications">Publications</a>
             <a href="#certifications">Certifications</a>
+             <a href="#contact">Contact</a>
             <a href="#contact" class="nav-button">Hire Me</a>
         </ul>
         <ul class="desktop-nav" aria-label="Desktop navigation">
@@ -1039,6 +1040,7 @@
             <li><a href="#projects">Projects</a></li>
             <li><a href="#publications">Publications</a></li>
             <li><a href="#certifications">Certifications</a></li>
+            <li><a href="#contact">Contact</a></li>
             <li><a href="#contact" class="nav-button">Hire Me</a></li>
         </ul>
     </nav>
