--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     </div>
 
     <nav>
-        <div class="logo" onclick="window.scrollTo(0,0);">ASHUTOSH.</div>
+        <div class="logo" onclick="window.scrollTo(0,0);">ASHUTOSH</div>
         
         <ul class="nav-links">
             <li><a href="#about" class="nav-link">About</a></li>
@@ -538,3 +538,4 @@
     </script>
 </body>
 </html>
+
