--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             </p>
             <div style="display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
                 <a href="#projects" class="hire-btn" style="padding: 12px 30px; font-size: 1rem;">View Projects</a>
-                <a href="#contact" class="hire-btn" style="background: white; color: var(--text-main); border: 1px solid #e2e8f0; padding: 12px 30px; font-size: 1rem;">Contact Me</a>
+                <a href="https://www.linkedin.com/in/ashutosh-pattnaik-386415229/" class="hire-btn" style="background: white; color: var(--text-main); border: 1px solid #e2e8f0; padding: 12px 30px; font-size: 1rem;">Linkedin</a>
             </div>
         </section>
 
@@ -538,4 +538,5 @@
     </script>
 </body>
 </html>
+
 
