--- a/index.html
+++ b/index.html
@@ -274,9 +274,10 @@
                 <h3>Customer Support Associate | Tech Mahindra</h3>
                 <span class="meta">Duration: May 2024 - Dec 2024</span>
                 <ul>
-                    <li>Handled customer interactions across multiple channels, delivering accurate issue resolution and maintaining high CSAT scores.</li>
-                    <li>Identified recurring customer concerns to support process improvements, streamlined workflow coordination with team leads.</li>
-                    <li>Ensured precise documentation through CRM systems to enhance service efficiency.</li>
+                    <li>Experience & Impact: Managed multi-channel customer interactions to deliver precise issue resolutions, consistently maintaining high CSAT (Customer Satisfaction) scores through quality service.</li>
+                    <li>Learning & Analysis: Developed the ability to perform trend analysis by identifying recurring customer pain points, contributing directly to organizational process improvements.</li>
+                    <li>Skills Acquired: Mastered CRM systems for meticulous documentation and data integrity, while sharpening technical troubleshooting and professional communication skills.</li>
+                    <li>Management & Coordination: Streamlined internal workflows by coordinating effectively with team leads and cross-functional departments to enhance overall service delivery and operational efficiency.</li>                
                 </ul>
             </div>
 
@@ -284,10 +285,9 @@
                 <h3>Data Analyst Intern | Meri Skill</h3>
                 <span class="meta">Duration: 45 days</span>
                 <ul>
-                    <li>Designed and developed two industrial dashboard projects in Power BI, driving data transformation from raw datasets to fully interactive visualizations</li>
-                        <li>Conducted thorough data cleaning and ETL processes to ensure high data integrity for business analytics</li>
-                        <li>Presented business insights to stakeholders, influencing key strategic decisions</li>
-                        <li>Implemented actionable recommendations that improved operational efficiency by 10%</li>
+                    <li>Visualization Excellence: Developed two high-impact Power BI dashboards during an intensive 45-day internship to transform complex datasets into actionable business insights.</li>
+                    <li>Data Integrity: Applied advanced data cleaning and preprocessing techniques to ensure the accuracy, reliability, and quality of all analytical outputs.</li>
+                    
                 </ul>
             </div>
 
@@ -298,6 +298,8 @@
                     <li>Analysed engagement metrics across social platforms, developing data-driven recommendations that increased user interaction by 15% and grew follower counts by 10% within one month.</li>
                     <li>Developed data-driven recommendations that boosted user interaction by 15% and increased follower count by 10% within one month</li>
                     <li>Collaborated with cross-functional teams to align marketing strategy with data insights</li>
+                    <li>Dynamic Analysis: Gained hands-on experience managing real-time data streams, enhancing the ability to derive insights from rapidly changing information flows</li>
+                    <li>Professional Collaboration: Contributed to cross-functional team projects, demonstrating strong communication skills and the ability to thrive in a fast-paced professional environment.</li>
                 </ul>
             </div>
         </section>
@@ -538,5 +540,6 @@
     </script>
 </body>
 </html>
+
 
 
